--- a/META.yaml
+++ b/META.yaml
@@ -1,4 +1,5 @@
 --- #YAML:1.0
+conflicts: {}
 distribution_type: module
 dynamic_config: 1
 license: perl
@@ -15,4 +16,4 @@ requires:
  File::Path: 0
  File::Spec: 0
  perl: '5.6.0'
-version: 0.07
+version: 0.08
