--- a/META.yaml
+++ b/META.yaml
@@ -2,19 +2,20 @@
 conflicts: {}
 distribution_type: module
 dynamic_config: 1
+generated_by: Module::Build version 0.10
 license: perl
 name: Module::Build
 recommends:
- Archive::Tar: 0.22
- YAML: 0.3
+  Archive::Tar: 0.22
+  YAML: 0.35
 requires:
- Config: 0
- Cwd: 0
- Data::Dumper: 0
- File::Basename: 0
- File::Copy: 0
- File::Find: 0
- File::Path: 0
- File::Spec: 0
- perl: '5.6.0'
-version: 0.09
+  Config: 0
+  Cwd: 0
+  Data::Dumper: 0
+  File::Basename: 0
+  File::Copy: 0
+  File::Find: 0
+  File::Path: 0
+  File::Spec: 0
+  perl: 5.6.0
+version: 0.10
