--- a/META.yaml
+++ b/META.yaml
@@ -2,9 +2,9 @@
 conflicts: {}
 distribution_type: module
 dynamic_config: 1
-generated_by: Module::Build version 0.10
+generated_by: Module::Build version 0.11
 license: perl
-name: Module::Build
+name: Module-Build
 recommends:
   Archive::Tar: 0.22
   YAML: 0.35
@@ -18,4 +18,4 @@ requires:
   File::Path: 0
   File::Spec: 0
   perl: 5.6.0
-version: 0.10
+version: 0.11
