--- a/META.yaml
+++ b/META.yaml
@@ -1,8 +1,10 @@
 --- #YAML:1.0
+build_requires:
+  Test: 0
 conflicts: {}
 distribution_type: module
 dynamic_config: 1
-generated_by: Module::Build version 0.11
+generated_by: Module::Build version 0.12
 license: perl
 name: Module-Build
 recommends:
@@ -18,4 +20,4 @@ requires:
   File::Path: 0
   File::Spec: 0
   perl: 5.6.0
-version: 0.11
+version: 0.12
