--- a/t/Sample/META.yaml
+++ b/t/Sample/META.yaml
@@ -1,8 +1,9 @@
 --- #YAML:1.0
+build_requires: {}
 conflicts: {}
 distribution_type: module
 dynamic_config: 0
-generated_by: Module::Build version 0.11
+generated_by: Module::Build version 0.12
 license: unknown
 name: Sample
 recommends: {}
