--- a/t/Sample/META.yml
+++ b/t/Sample/META.yml
@@ -1,11 +1,10 @@
 --- #YAML:1.0
+name: Sample
+version: 0.01
+license: perl
+distribution_type: module
+requires: {}
+recommends: {}
 build_requires: {}
 conflicts: {}
-distribution_type: module
-dynamic_config: 0
-generated_by: Module::Build version 0.13
-license: unknown
-name: Sample
-recommends: {}
-requires: {}
-version: 0.01
+generated_by: Module::Build version 0.14
