--- a/t/Sample/META.yml
+++ b/t/Sample/META.yml
@@ -7,4 +7,8 @@ requires: {}
 recommends: {}
 build_requires: {}
 conflicts: {}
-generated_by: Module::Build version 0.17
+provides:
+  Sample:
+    file: lib/Sample.pm
+    version: 0.01
+generated_by: Module::Build version 0.18
