--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name: Module-Build
-version: 0.18_04
+version: 0.19
 license: perl
 distribution_type: module
 requires:
@@ -20,7 +20,6 @@ recommends:
   Archive::Tar: 1.00
   ExtUtils::Install: 0.3
   ExtUtils::ParseXS: 2.02
-  Module::Info: 0
   YAML: 0.35
 build_requires:
   Test: 0
@@ -28,56 +27,44 @@ conflicts: {}
 provides:
   Module::Build:
     file: lib/Module/Build.pm
-    version: 0.18_04
+    version: 0.19
   Module::Build::Base:
     file: lib/Module/Build/Base.pm
-    version: ~
+  Module::Build::Base::_version:
+    file: lib/Module/Build/Base.pm
   Module::Build::Compat:
     file: lib/Module/Build/Compat.pm
     version: 0.02
+  Module::Build::Cookbook:
+    file: lib/Module/Build/Cookbook.pm
   Module::Build::PPMMaker:
     file: lib/Module/Build/PPMMaker.pm
-    version: ~
   Module::Build::Platform::Amiga:
     file: lib/Module/Build/Platform/Amiga.pm
-    version: ~
   Module::Build::Platform::Default:
     file: lib/Module/Build/Platform/Default.pm
-    version: ~
   Module::Build::Platform::EBCDIC:
     file: lib/Module/Build/Platform/EBCDIC.pm
-    version: ~
   Module::Build::Platform::MPEiX:
     file: lib/Module/Build/Platform/MPEiX.pm
-    version: ~
   Module::Build::Platform::MacOS:
     file: lib/Module/Build/Platform/MacOS.pm
-    version: ~
   Module::Build::Platform::RiscOS:
     file: lib/Module/Build/Platform/RiscOS.pm
-    version: ~
   Module::Build::Platform::Unix:
     file: lib/Module/Build/Platform/Unix.pm
-    version: ~
   Module::Build::Platform::VMS:
     file: lib/Module/Build/Platform/VMS.pm
-    version: ~
   Module::Build::Platform::VOS:
     file: lib/Module/Build/Platform/VOS.pm
-    version: ~
   Module::Build::Platform::Windows:
     file: lib/Module/Build/Platform/Windows.pm
-    version: ~
   Module::Build::Platform::Windows::BCC:
     file: lib/Module/Build/Platform/Windows.pm
-    version: ~
   Module::Build::Platform::Windows::GCC:
     file: lib/Module/Build/Platform/Windows.pm
-    version: ~
   Module::Build::Platform::Windows::MSVC:
     file: lib/Module/Build/Platform/Windows.pm
-    version: ~
   Module::Build::Platform::darwin:
     file: lib/Module/Build/Platform/darwin.pm
-    version: ~
-generated_by: Module::Build version 0.18_04
+generated_by: Module::Build version 0.19
