--- a/t/Sample/META.yml
+++ b/t/Sample/META.yml
@@ -1,8 +1,10 @@
 --- #YAML:1.0
 name: Sample
 version: 0.01
+author:
+  - Sample Man <sample@example.com>
+abstract: Foo foo sample foo
 license: perl
-distribution_type: module
 requires:
   File::Spec: 0
 recommends: {}
@@ -14,4 +16,4 @@ provides:
     version: 0.01
   Sample::NoPod:
     file: lib/Sample/NoPod.pm
-generated_by: Module::Build version 0.21_02
+generated_by: Module::Build version 0.22
