--- a/t/Sample/META.yml
+++ b/t/Sample/META.yml
@@ -11,6 +11,10 @@ provides:
   Sample:
     file: lib/Sample.pm
     version: 0.01
+  Sample::Ex:
+    file: lib/Sample.pm
+    version: 0.02
   Sample::NoPod:
     file: lib/Sample/NoPod.pm
-generated_by: Module::Build version 0.261
+    version: ~
+generated_by: Module::Build version 0.2701
