--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,11 @@
 --- #YAML:1.0
 name: Module-Build
-version: 0.27_03
+version: 0.27_04
 author:
-  - Ken Williams, kwilliams@cpan.org
+  - Ken Williams <kwilliams@cpan.org>
   - |-
     Development questions, bug reports, and patches should be sent to the
-    Module-Build mailing list at module-build-general@lists.sourceforge.net .
+    Module-Build mailing list at <module-build-general@lists.sourceforge.net>.
 abstract: Build and install Perl modules
 license: perl
 resources:
@@ -26,23 +26,23 @@ requires:
   File::Copy: 0
   File::Find: 0
   File::Path: 0
-  File::Spec: 0
+  File::Spec: 0.82
   Getopt::Long: 0
   IO::File: 0
   Test::Harness: 0
   Text::ParseWords: 0
   perl: 5.005_03
+build_requires:
+  Test::More: 0
 recommends:
   Archive::Tar: 1.08
   ExtUtils::Install: 0.3
   Module::Signature: 0.21
   Pod::Readme: 0.04
-build_requires:
-  Test::More: 0
 provides:
   Module::Build:
     file: lib/Module/Build.pm
-    version: 0.27_03
+    version: 0.27_04
   Module::Build::Base:
     file: lib/Module/Build/Base.pm
   Module::Build::Compat:
@@ -88,4 +88,8 @@ provides:
     file: lib/Module/Build/PodParser.pm
   Module::Build::PodTester:
     file: lib/Module/Build/Base.pm
-generated_by: Module::Build version 0.2703
+generated_by: Module::Build version 0.2704
+meta-spec:
+  url: |-
+    http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
