--- a/META.yml
+++ b/META.yml
@@ -1,48 +1,40 @@
 --- #YAML:1.0
 name: Module-Build
-version: 0.27_07
+version: 0.2612
 author:
-  - Ken Williams <kwilliams@cpan.org>
+  - Ken Williams, kwilliams@cpan.org
   - |-
     Development questions, bug reports, and patches should be sent to the
-    Module-Build mailing list at <module-build-general@lists.sourceforge.net>.
+    Module-Build mailing list at module-build-general@lists.sourceforge.net .
 abstract: Build and install Perl modules
 license: perl
-resources:
-  MailingList: |-
-    http://lists.sourceforge.net/lists/listinfo/module-build-general
-  bugtracker: |-
-    http://rt.cpan.org/NoAuth/Bugs.html?Dist=Module-Build
-  homepage: http://sourceforge.net/projects/module-build
-  license: http://dev.perl.org/licenses/
 requires:
+  Config: 0
   Cwd: 0
   Data::Dumper: 0
   ExtUtils::Install: 0
-  ExtUtils::Manifest: 0
-  ExtUtils::Mkbootstrap: 0
   File::Basename: 0
   File::Compare: 0
   File::Copy: 0
   File::Find: 0
   File::Path: 0
-  File::Spec: 0.82
-  Getopt::Long: 0
+  File::Spec: 0
   IO::File: 0
-  Test::Harness: 0
   Text::ParseWords: 0
   perl: 5.005_03
-build_requires:
-  Test::More: 0
 recommends:
   Archive::Tar: 1.08
+  ExtUtils::CBuilder: 0.02
   ExtUtils::Install: 0.3
+  ExtUtils::ParseXS: 2.02
   Module::Signature: 0.21
-  Pod::Readme: 0.04
+  Pod::Text: 0
+build_requires:
+  Test: 0
 provides:
   Module::Build:
     file: lib/Module/Build.pm
-    version: 0.27_07
+    version: 0.2612
   Module::Build::Base:
     file: lib/Module/Build/Base.pm
   Module::Build::Compat:
@@ -50,10 +42,6 @@ provides:
     version: 0.03
   Module::Build::Cookbook:
     file: lib/Module/Build/Cookbook.pm
-  Module::Build::ModuleInfo:
-    file: lib/Module/Build/ModuleInfo.pm
-  Module::Build::Notes:
-    file: lib/Module/Build/Notes.pm
   Module::Build::PPMMaker:
     file: lib/Module/Build/PPMMaker.pm
   Module::Build::Platform::Amiga:
@@ -76,6 +64,12 @@ provides:
     file: lib/Module/Build/Platform/VOS.pm
   Module::Build::Platform::Windows:
     file: lib/Module/Build/Platform/Windows.pm
+  Module::Build::Platform::Windows::BCC:
+    file: lib/Module/Build/Platform/Windows.pm
+  Module::Build::Platform::Windows::GCC:
+    file: lib/Module/Build/Platform/Windows.pm
+  Module::Build::Platform::Windows::MSVC:
+    file: lib/Module/Build/Platform/Windows.pm
   Module::Build::Platform::aix:
     file: lib/Module/Build/Platform/aix.pm
   Module::Build::Platform::cygwin:
@@ -88,8 +82,4 @@ provides:
     file: lib/Module/Build/PodParser.pm
   Module::Build::PodTester:
     file: lib/Module/Build/Base.pm
-generated_by: Module::Build version 0.2707
-meta-spec:
-  url: |-
-    http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+generated_by: Module::Build version 0.2612
