--- a/META.yml
+++ b/META.yml
@@ -1,20 +1,19 @@
---- #YAML:1.0
+---
 name: Module-Build
-version: 0.27_10
+version: 0.28
 author:
-  - Ken Williams <kwilliams@cpan.org>
+  - 'Ken Williams <kwilliams@cpan.org>'
   - |-
     Development questions, bug reports, and patches should be sent to the
     Module-Build mailing list at <module-build-general@lists.sourceforge.net>.
 abstract: Build and install Perl modules
 license: perl
 resources:
-  MailingList: |-
-    http://lists.sourceforge.net/lists/listinfo/module-build-general
-  bugtracker: |-
-    http://rt.cpan.org/NoAuth/Bugs.html?Dist=Module-Build
+  MailingList: http://lists.sourceforge.net/lists/listinfo/module-build-general
+  bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Module-Build
   homepage: http://sourceforge.net/projects/module-build
   license: http://dev.perl.org/licenses/
+  repository: http://svn.perl.org/modules/Module-Build/
 requires:
   Cwd: 0
   Data::Dumper: 0
@@ -30,19 +29,20 @@ requires:
   Getopt::Long: 0
   IO::File: 0
   Test::Harness: 0
+  Text::Abbrev: 0
   Text::ParseWords: 0
   perl: 5.005_03
-build_requires:
-  Test::More: 0
 recommends:
   Archive::Tar: 1.08
+  ExtUtils::CBuilder: 0.15
   ExtUtils::Install: 0.3
+  ExtUtils::ParseXS: 1.02
   Module::Signature: 0.21
   Pod::Readme: 0.04
 provides:
   Module::Build:
     file: lib/Module/Build.pm
-    version: 0.27_10
+    version: 0.28
   Module::Build::Base:
     file: lib/Module/Build/Base.pm
   Module::Build::Compat:
@@ -91,8 +91,7 @@ provides:
   Module::Build::YAML:
     file: lib/Module/Build/YAML.pm
     version: 0.50
-generated_by: Module::Build version 0.271
+generated_by: Module::Build version 0.28
 meta-spec:
-  url: |-
-    http://module-build.sourceforge.net/META-spec-v1.2.html
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
