--- a/META.yml
+++ b/META.yml
@@ -1,20 +1,15 @@
 ---
 name: Module-Build
-version: !perl/Module::Build::Version
-  original: 0.2804
-  version:
-    - 0
-    - 280
-    - 400
+version: 0.2805
 author:
   - 'Ken Williams <kwilliams@cpan.org>'
   - |-
     Development questions, bug reports, and patches should be sent to the
-    Module-Build mailing list at <module-build-general@lists.sourceforge.net>.
+    Module-Build mailing list at <module-build@perl.org>.
 abstract: Build and install Perl modules
 license: perl
 resources:
-  MailingList: http://lists.sourceforge.net/lists/listinfo/module-build-general
+  MailingList: mailto:module-build@perl.org
   bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Module-Build
   homepage: http://sourceforge.net/projects/module-build
   license: http://dev.perl.org/licenses/
@@ -37,7 +32,6 @@ requires:
   Text::Abbrev: 0
   Text::ParseWords: 0
   perl: 5.005_03
-  version: 0.64
 recommends:
   Archive::Tar: 1.08
   ExtUtils::CBuilder: 0.15
@@ -45,10 +39,11 @@ recommends:
   ExtUtils::ParseXS: 1.02
   Module::Signature: 0.21
   Pod::Readme: 0.04
+  version: 0.661
 provides:
   Module::Build:
     file: lib/Module/Build.pm
-    version: 0.2804
+    version: 0.2805
   Module::Build::Base:
     file: lib/Module/Build/Base.pm
   Module::Build::Compat:
@@ -96,10 +91,11 @@ provides:
     file: lib/Module/Build/Base.pm
   Module::Build::Version:
     file: lib/Module/Build/Version.pm
+    version: ~
   Module::Build::YAML:
     file: lib/Module/Build/YAML.pm
     version: 0.50
-generated_by: Module::Build version 0.2804
+generated_by: Module::Build version 0.2805
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
