--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Module-Build
-version: 0.2805
+version: 0.2805_01
 author:
   - 'Ken Williams <kwilliams@cpan.org>'
   - |-
@@ -43,12 +43,14 @@ recommends:
 provides:
   Module::Build:
     file: lib/Module/Build.pm
-    version: 0.2805
+    version: 0.2805_01
   Module::Build::Base:
     file: lib/Module/Build/Base.pm
   Module::Build::Compat:
     file: lib/Module/Build/Compat.pm
     version: 0.03
+  Module::Build::Config:
+    file: lib/Module/Build/Config.pm
   Module::Build::Cookbook:
     file: lib/Module/Build/Cookbook.pm
   Module::Build::ModuleInfo:
@@ -91,11 +93,11 @@ provides:
     file: lib/Module/Build/Base.pm
   Module::Build::Version:
     file: lib/Module/Build/Version.pm
-    version: ~
+    version: ''
   Module::Build::YAML:
     file: lib/Module/Build/YAML.pm
     version: 0.50
-generated_by: Module::Build version 0.2805
+generated_by: Module::Build version 0.280501
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
