Import of KWILLIAMS/Module-Build-0.2806 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.2806
gitpan-cpan-path:         KWILLIAMS/Module-Build-0.2806.tar.gz
gitpan-cpan-author:       KWILLIAMS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Module-Build
-version: 0.2805_01
+version: 0.2806
 author:
   - 'Ken Williams <kwilliams@cpan.org>'
   - |-
@@ -43,7 +43,7 @@ recommends:
 provides:
   Module::Build:
     file: lib/Module/Build.pm
-    version: 0.2805_01
+    version: 0.2806
   Module::Build::Base:
     file: lib/Module/Build/Base.pm
   Module::Build::Compat:
@@ -97,7 +97,7 @@ provides:
   Module::Build::YAML:
     file: lib/Module/Build/YAML.pm
     version: 0.50
-generated_by: Module::Build version 0.280501
+generated_by: Module::Build version 0.2806
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
