--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Module-Build
-version: 0.2808_04
+version: 0.2808_05
 author:
   - 'Ken Williams <kwilliams@cpan.org>'
   - |-
@@ -31,7 +31,10 @@ requires:
   Test::Harness: 0
   Text::Abbrev: 0
   Text::ParseWords: 0
-  perl: 5.005_04
+  perl: 5.006001
+build_requires:
+  Test::Harness: 2.03
+  Test::More: 0.49
 recommends:
   Archive::Tar: 1.08
   ExtUtils::CBuilder: 0.15
@@ -43,74 +46,74 @@ recommends:
 provides:
   Module::Build:
     file: lib/Module/Build.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Base:
     file: lib/Module/Build/Base.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Compat:
     file: lib/Module/Build/Compat.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Config:
     file: lib/Module/Build/Config.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Cookbook:
     file: lib/Module/Build/Cookbook.pm
   Module::Build::Dumper:
     file: lib/Module/Build/Dumper.pm
   Module::Build::ModuleInfo:
     file: lib/Module/Build/ModuleInfo.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Notes:
     file: lib/Module/Build/Notes.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::PPMMaker:
     file: lib/Module/Build/PPMMaker.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Platform::Amiga:
     file: lib/Module/Build/Platform/Amiga.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Platform::Default:
     file: lib/Module/Build/Platform/Default.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Platform::EBCDIC:
     file: lib/Module/Build/Platform/EBCDIC.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Platform::MPEiX:
     file: lib/Module/Build/Platform/MPEiX.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Platform::MacOS:
     file: lib/Module/Build/Platform/MacOS.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Platform::RiscOS:
     file: lib/Module/Build/Platform/RiscOS.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Platform::Unix:
     file: lib/Module/Build/Platform/Unix.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Platform::VMS:
     file: lib/Module/Build/Platform/VMS.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Platform::VOS:
     file: lib/Module/Build/Platform/VOS.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Platform::Windows:
     file: lib/Module/Build/Platform/Windows.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Platform::aix:
     file: lib/Module/Build/Platform/aix.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Platform::cygwin:
     file: lib/Module/Build/Platform/cygwin.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Platform::darwin:
     file: lib/Module/Build/Platform/darwin.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::Platform::os2:
     file: lib/Module/Build/Platform/os2.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::PodParser:
     file: lib/Module/Build/PodParser.pm
-    version: 0.2808_04
+    version: 0.2808_05
   Module::Build::PodTester:
     file: lib/Module/Build/Base.pm
   Module::Build::Version:
@@ -119,7 +122,7 @@ provides:
   Module::Build::YAML:
     file: lib/Module/Build/YAML.pm
     version: 0.50
-generated_by: Module::Build version 0.280804
+generated_by: Module::Build version 0.280805
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
