--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Module-Build
-version: 0.33
+version: 0.33_01
 author:
   - 'Ken Williams <kwilliams@cpan.org>'
   - |-
@@ -14,6 +14,11 @@ resources:
   homepage: http://sourceforge.net/projects/module-build
   license: http://dev.perl.org/licenses/
   repository: http://svn.perl.org/modules/Module-Build/
+build_requires:
+  File::Temp: 0.15
+  Module::Build: 0.3301
+  Test::Harness: 3.16
+  Test::More: 0.49
 requires:
   Archive::Tar: 1.08
   Cwd: 0
@@ -33,10 +38,6 @@ requires:
   Text::Abbrev: 0
   Text::ParseWords: 0
   perl: 5.006001
-build_requires:
-  File::Temp: 0.15
-  Test::Harness: 3.16
-  Test::More: 0.49
 recommends:
   ExtUtils::CBuilder: 0.15
   ExtUtils::Install: 0.3
@@ -44,79 +45,81 @@ recommends:
   Module::Signature: 0.21
   Pod::Readme: 0.04
   version: 0.74
+configure_requires:
+  Module::Build: 0.3301
 provides:
   Module::Build:
     file: lib/Module/Build.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Base:
     file: lib/Module/Build/Base.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Compat:
     file: lib/Module/Build/Compat.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Config:
     file: lib/Module/Build/Config.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Cookbook:
     file: lib/Module/Build/Cookbook.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Dumper:
     file: lib/Module/Build/Dumper.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::ModuleInfo:
     file: lib/Module/Build/ModuleInfo.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Notes:
     file: lib/Module/Build/Notes.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::PPMMaker:
     file: lib/Module/Build/PPMMaker.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Platform::Amiga:
     file: lib/Module/Build/Platform/Amiga.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Platform::Default:
     file: lib/Module/Build/Platform/Default.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Platform::EBCDIC:
     file: lib/Module/Build/Platform/EBCDIC.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Platform::MPEiX:
     file: lib/Module/Build/Platform/MPEiX.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Platform::MacOS:
     file: lib/Module/Build/Platform/MacOS.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Platform::RiscOS:
     file: lib/Module/Build/Platform/RiscOS.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Platform::Unix:
     file: lib/Module/Build/Platform/Unix.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Platform::VMS:
     file: lib/Module/Build/Platform/VMS.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Platform::VOS:
     file: lib/Module/Build/Platform/VOS.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Platform::Windows:
     file: lib/Module/Build/Platform/Windows.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Platform::aix:
     file: lib/Module/Build/Platform/aix.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Platform::cygwin:
     file: lib/Module/Build/Platform/cygwin.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Platform::darwin:
     file: lib/Module/Build/Platform/darwin.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::Platform::os2:
     file: lib/Module/Build/Platform/os2.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::PodParser:
     file: lib/Module/Build/PodParser.pm
-    version: 0.33
+    version: 0.33_01
   Module::Build::PodTester:
     file: lib/Module/Build/Base.pm
   Module::Build::Version:
@@ -125,7 +128,7 @@ provides:
   Module::Build::YAML:
     file: lib/Module/Build/YAML.pm
     version: 0.50
-generated_by: Module::Build version 0.33
+generated_by: Module::Build version 0.3301
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
